# voiceclinic-local-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml
docs/: API.md  ARCHITECTURE.md  AZURE_ARCHITECTURE.md  DEMO_SCRIPT.md  GUARDRAILS.md  LIVEKIT_LANGGRAPH.md  MICROSERVICES.md  PLATFORM_NOTES.md  ROADMAP.md  SETUP.md
infra/asterisk/: extensions.conf  pjsip.conf
infra/livekit/: livekit.yaml
scripts/: dev.py
src/voiceclinic/: __init__.py  agent.py  api.py  cli.py  config.py  db.py  guardrails.py  livekit_agent.py  llm.py  orchestration.py  scheduling.py  text.py
src/voiceclinic/telephony/: __init__.py  audiosocket_server.py
src/voiceclinic/voice/: __init__.py  stt.py  tts.py
tests/: test_agent.py  test_guardrails.py  test_llm.py  test_orchestration.py  test_scheduling.py
web/: index.html
