[project]
name = "voiceclinic-local"
version = "0.1.0"
description = "Agente telefonico local con LLM para gestion de citas de pacientes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
voice = [
  "faster-whisper>=1.1.0",
]
livekit = [
  "livekit-agents[langchain,silero]~=1.5",
  "langgraph>=0.2.0",
]
orchestration = [
  "langgraph>=0.2.0",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
voiceclinic = "voiceclinic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceclinic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
